# mentat

./: .gitignore  .travis.yml  798.patch  CNAME  Cargo.toml  Makefile  NOTES  README.md
.github/: dependabot.yml
core/: Cargo.toml
core-traits/: Cargo.toml  lib.rs  value_type_set.rs  values.rs
core/src/: cache.rs  counter.rs  lib.rs  sql_types.rs  tx_report.rs  util.rs
db/: Cargo.toml
db-traits/: Cargo.toml  errors.rs  lib.rs
db/src/: add_retract_alter_set.rs  bootstrap.rs  cache.rs  db.rs  debug.rs  entids.rs  internal_types.rs  lib.rs  metadata.rs  schema.rs  timelines.rs  tx.rs  tx_checking.rs  tx_observer.rs  types.rs  upsert_resolution.rs  watcher.rs
db/tests/: value_tests.rs
docs/: tutorial.md
edn/: Cargo.toml
edn/src/: entities.rs  intern_set.rs  lib.rs  matcher.rs  namespaceable_name.rs  pretty_print.rs  query.rs  symbols.rs  types.rs  utils.rs  value_rc.rs
edn/tests/: query_tests.rs  serde_support.rs  tests.rs
examples/: movies.edn
ffi/: Cargo.toml
ffi/src/: android.rs  lib.rs  utils.rs
public-traits/: Cargo.toml  errors.rs  lib.rs
query-algebrizer/: Cargo.toml
query-algebrizer-traits/: Cargo.toml  errors.rs  lib.rs
query-algebrizer/src/: lib.rs  types.rs  validate.rs
query-algebrizer/src/clauses/: convert.rs  fulltext.rs  ground.rs  inputs.rs  mod.rs  not.rs  or.rs  pattern.rs  predicate.rs  resolve.rs  tx_log_api.rs  where_fn.rs
query-algebrizer/tests/: fulltext.rs  ground.rs  predicate.rs  type_reqs.rs
query-algebrizer/tests/utils/: mod.rs
query-projector/: Cargo.toml
query-projector-traits/: Cargo.toml  aggregates.rs  errors.rs  lib.rs
query-projector-traits/tests/: aggregates.rs
query-projector/src/: binding_tuple.rs  lib.rs  project.rs  pull.rs  relresult.rs  translate.rs
query-projector/src/projectors/: constant.rs  mod.rs  pull_two_stage.rs  simple.rs
query-projector/tests/: translate.rs
query-pull/: Cargo.toml
query-pull-traits/: Cargo.toml  errors.rs  lib.rs
query-pull/src/: lib.rs
query-sql/: Cargo.toml
query-sql/src/: lib.rs
sql/: Cargo.toml
sql-traits/: Cargo.toml  errors.rs  lib.rs
sql/src/: lib.rs
src/: conn.rs  lib.rs  query_builder.rs  store.rs  store.rs.rej  sync.rs  vocabulary.rs
tests/: api.rs  cache.rs  entity_builder.rs  external_test.rs  pull.rs  query.rs  tolstoy.rs  vocabulary.rs
tolstoy/: Cargo.toml
tolstoy-traits/: Cargo.toml  errors.rs  lib.rs
tolstoy/src/: bootstrap.rs  datoms.rs  debug.rs  lib.rs  metadata.rs  remote_client.rs  schema.rs  syncer.rs  tx_mapper.rs  tx_processor.rs  tx_uploader.rs  types.rs
tools/cli/: Cargo.toml
tools/cli/src/mentat_cli/: command_parser.rs  input.rs  lib.rs  repl.rs
transaction/: Cargo.toml
transaction/src/: entity_builder.rs  lib.rs  metadata.rs  query.rs
