[package]
name = "core_traits"
version = "0.0.2"
workspace = ".."

[lib]
name = "core_traits"
path = "lib.rs"

[dependencies]
chrono = { version = "~0.4", features = ["serde"] }
enum-set = "~0.0.8"
lazy_static = "~1.4"
indexmap = "~1.5"
ordered-float = { version = "~2.0", features = ["serde"] }
uuid = { version = "~0.8", features = ["v4", "serde"] }
serde = { version = "~1.0", features = ["rc"] }
serde_derive = "~1.0"

[dependencies.edn]
path = "../edn"
features = ["serde_support"]
