[package]
name = "mentat_core"
version = "0.0.1"
workspace = ".."

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
enum-set = "0.0"
failure = "0.1"
indexmap = "1.3"
ordered-float = { version = "1.0", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

[dependencies.core_traits]
path = "../core-traits"

[dependencies.edn]
path = "../edn"
features = ["serde_support"]
