[package]
name = "mentat_db"
version = "0.0.2"
workspace = ".."

[features]
default = []
sqlcipher = ["rusqlite/sqlcipher"]
syncable = ["serde", "serde_json", "serde_derive"]

[dependencies]
failure = "~0.1"
indexmap = "~1.5"
itertools = "~0.9"
lazy_static = "~1.4"
log = "~0.4"
ordered-float = "~2.0"
time = "~0.2"
petgraph = "~0.5"
serde = { version = "~1.0", optional = true }
serde_json = { version = "~1.0", optional = true }
serde_derive = { version = "~1.0", optional = true }

[dependencies.rusqlite]
version = "~0.23"
features = ["limits", "bundled"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.db_traits]
path = "../db-traits"

[dependencies.mentat_sql]
path = "../sql"

# TODO: This should be in dev-dependencies.
[dependencies.tabwriter]
version = "~1.2"

[dev-dependencies]
env_logger = "0.7"
#tabwriter = { version = "1.2.1" }
