[package]
name = "mentat_query_pull"
version = "0.0.2"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "~0.1"

[dependencies.query_pull_traits]
path = "../query-pull-traits"

[dependencies.rusqlite]
version = "~0.23"
features = ["limits", "bundled"]

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_db]
path = "../db"
