[package]
name = "mentat_query_sql"
version = "0.0.2"
workspace = ".."

[dependencies.rusqlite]
version = "~0.23"
features = ["limits", "bundled"]

[dependencies.edn]
path = "../edn"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_core]
path = "../core"

[dependencies.mentat_sql]
path = "../sql"

[dependencies.sql_traits]
path = "../sql-traits"

[dependencies.mentat_query_algebrizer]
path = "../query-algebrizer"
