[package]
name = "mentat_sql"
version = "0.0.2"
workspace = ".."

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "~0.1"
ordered-float = "~2.0"

[dependencies.rusqlite]
version = "~0.24"
features = ["limits", "bundled"]

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_core]
path = "../core"

[dependencies.sql_traits]
path = "../sql-traits"
