[package]
name = "tolstoy_traits"
version = "0.0.2"
workspace = ".."

[lib]
name = "tolstoy_traits"
path = "lib.rs"

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "~0.1"
failure_derive = "~0.1"
http = "~0.2"
hyper = "~0.13"
serde_json = "~1.0"
uuid = { version = "~0.8" }

[dependencies.rusqlite]
version = "~0.24"
features = ["limits", "bundled"]

[dependencies.db_traits]
path = "../db-traits"
