[package]
edition = "2018"
name = "mentat_tolstoy"
version = "0.0.1"
workspace = ".."
authors = ["Grisha Kruglov <gkruglov@mozilla.com>"]

[features]
sqlcipher = ["rusqlite/sqlcipher"]

[dependencies]
failure = "0.1.6"
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4.1"
http = "0.2"
log = "0.4"
mime = "0.3.16"
#tokio = { version = "0.2", features = ["full"] }
tokio-core = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_cbor = "0.11.1"
serde_derive = "1.0"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["v4", "serde"] }

[dependencies.edn]
path = "../edn"

[dependencies.mentat_core]
path = "../core"

[dependencies.core_traits]
path = "../core-traits"

[dependencies.mentat_db]
path = "../db"
features = ["syncable"]

[dependencies.db_traits]
path = "../db-traits"

[dependencies.tolstoy_traits]
path = "../tolstoy-traits"

[dependencies.public_traits]
path = "../public-traits"

[dependencies.mentat_transaction]
path = "../transaction"

[dependencies.rusqlite]
version = "0.21"
features = ["limits"]
