[package]
name = "mentat_cli"
version = "0.0.1"

# Forward mentat's features.
[features]
default = ["bundled_sqlite3", "syncable"]
sqlcipher = ["mentat/sqlcipher"]
bundled_sqlite3 = ["mentat/bundled_sqlite3"]
syncable = ["mentat/syncable"]

[lib]
name = "mentat_cli"
path = "src/mentat_cli/lib.rs"

[[bin]]
name = "mentat_cli"
doc = false
test = false

[dependencies]
combine = "4.0.0-beta.2"
dirs = "2.0.2"
env_logger = "0.7.1"
failure = "0.1.6"
failure_derive = "0.1.6"
getopts = "0.2"
lazy_static = "1.4.0"
linefeed = "0.6.0"
log = "0.4"
tabwriter = "1"
tempfile = "3.1.0"
termion = "1"
time = "0.2.2"

[dependencies.rusqlite]
version = "0.21"
features = ["limits"]

[dependencies.mentat]
path = "../.."
default-features = false

[dependencies.edn]
path = "../../edn"

[dependencies.core_traits]
path = "../../core-traits"

[dependencies.mentat_db]
path = "../../db"
