[package]
name = "mentat_cli"
version = "0.0.2"

# Forward mentat's features.
[features]
default = ["bundled_sqlite3", "syncable"]
sqlcipher = ["mentat/sqlcipher"]
bundled_sqlite3 = ["mentat/bundled_sqlite3"]
syncable = ["mentat/syncable"]

[lib]
name = "mentat_cli"
path = "src/mentat_cli/lib.rs"

[[bin]]
name = "mentat_cli"
doc = false
test = false

[dependencies]
combine = "~4.3"
dirs = "~3.0"
env_logger = "~0.8"
failure = "~0.1"
failure_derive = "~0.1"
getopts = "~0.2"
lazy_static = "~1.4"
linefeed = "~0.6"
log = "~0.4"
tabwriter = "~1.2"
tempfile = "~3.2"
termion = "~1.5"
time = "~0.2"

[dependencies.rusqlite]
version = "~0.24"
features = ["limits", "bundled"]

[dependencies.mentat]
path = "../.."
default-features = false

[dependencies.edn]
path = "../../edn"

[dependencies.core_traits]
path = "../../core-traits"

[dependencies.mentat_db]
path = "../../db"
